--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@
 
 .App img {
     width: 480px;
-    margin-right: 80px;
 }
 
 .App {
@@ -30,8 +29,6 @@
     text-align: center;
     position: absolute;
     top: 0;
-    margin-top: 7rem;
-    margin-right: 1rem;
     display: grid;
     gap: 2.7rem;
     font-family:sans-serif  ;
@@ -51,13 +48,11 @@ Button {
     padding: 0.8%;
     border-radius: 10px;
     cursor: pointer;
-    margin-left: 4rem;
     
 }
 
 
 article {
-    margin: 50px;
     padding: 30px;
     font-family: sans-serif;
     color: #fff;
@@ -67,7 +62,6 @@ article {
     border-radius: 15px;
     height: 10.5rem;
     width: 30rem;
-    margin-top: 10rem;
     font-weight:550;
     
 }
@@ -93,7 +87,6 @@ article::after {
 
 .Sheet p {
     
-    margin: 10px 0 0;
     color: black;
     line-height: 1.2em;
     margin-top: 1rem;
@@ -112,9 +105,6 @@ article::after {
 }
 
 .author {
-    position: absolute;
-    bottom: 0;
-    margin-bottom: 15px;
     padding: 10px;
     width: 200px;
     text-align: center;
@@ -122,54 +112,60 @@ article::after {
     opacity: 0.85;
 }
 
-@media (max-width: 1150px){
-
-
-    Button {
-        margin-left: 2rem;
-    }
-    
-}
-
-@media (max-width: 700px){
-
-    Button {
-        margin-left: 2rem;
-    }
-    
-}
-
-
-
-@media (max-width: 600px){
-
+@media (max-width: 320px){
 
     .App {
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
+        min-width: 280px;
+        min-height: 700px;
     }
 
-    .Title {
-        width: 300px;
-        margin-right: 0.2rem;
+    .Title{
+        width: 15rem;
+        height: 9rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        top: -9rem;
     }
 
-    Button {
-        margin-left: 4.5rem;
+    .Title h1{
+        position: relative;
+        left: 0.7rem;
     }
 
-    article {
-        width: 80%;
-        height: 25%;
+    .Title button{
+        position: relative;
+        top: 1rem;
+        left: 0.5rem;
     }
 
-    .Sheet p {
-        margin-bottom: 100px;
-        font-size: 0.9rem;
+    .Sheet{
+        width: 13.5rem;
+        height: 10rem;
+        position: relative;
+        bottom: 5rem;
     }
-    
+
+    .Sheet p{
+
+        font-size: 13px;
+        position: relative;
+        bottom: 0.2rem;
+    }
+
+    .author{
+        position: relative;
+        bottom: 1rem;
+    }
+
 }
+
 
 
 
